rempve useless package
generate and download pdf for vacation request functionality done

--- a/frontend/src/app/pages/dashboard/employee-dashboard/employee-dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/employee-dashboard/employee-dashboard.component.html
@@ -168,12 +168,20 @@ header="Vacation days information"
       <td>{{ request.adminEmail || 'Not Assigned' }}</td>
       <td>
         <button
+          pButton
+          icon="pi pi-file-pdf"
+          class="p-button-text p-button-info p-button-lg"
+          (click)="downloadPdf(request.id)"
+        ></button>
+
+        <button
           *ngIf="request.status === VacationRequestStatus.New"
           pButton
           icon="pi pi-trash"
-          class="p-button-text p-button-danger"
+          class="p-button-text p-button-danger p-button-lg"
           (click)="deleteVacationRequest(request.id)"
         ></button>
+
       </td>
     </tr>
   </ng-template>
